--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "express": "^4.17.3",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.43"
+    "typeorm": "^0.2.43",
+    "uuid": "^8.3.2"
   }
 }
